--- a/swift_exercise1/swift_exercise1/Base.lproj/Main.storyboard
+++ b/swift_exercise1/swift_exercise1/Base.lproj/Main.storyboard
@@ -10,55 +10,43 @@
         <!--Podcasts-->
         <scene sceneID="9ba-Xf-NLy">
             <objects>
-                <viewController id="pvO-e8-LHs" customClass="PodcastsViewController" customModule="swift_exercise1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="pvO-e8-LHs" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Syo-6f-08d">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Podcasts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Mi-Rv-PPN">
-                                <rect key="frame" x="171.5" y="49" width="71" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Podcasts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8w7-Pk-cmT">
+                                <rect key="frame" x="171.5" y="49" width="71" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A0G-j2-tdR">
-                                <rect key="frame" x="10" y="79.5" width="394" height="827.5"/>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="cbs-xg-cfw">
+                                <rect key="frame" x="10" y="80" width="394" height="723"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mzJ-UE-U7w">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="500"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="500" identifier="podcastsMainStackViewHeightConstraint" id="x2n-JO-UtQ"/>
-                                        </constraints>
-                                    </stackView>
+                                    <containerView opaque="NO" contentMode="scaleAspectFit" id="gSC-Bd-7NL">
+                                        <rect key="frame" x="0.0" y="0.0" width="394" height="723"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                        <connections>
+                                            <segue destination="aKf-AF-JIF" kind="embed" id="GDz-mA-OLI"/>
+                                        </connections>
+                                    </containerView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="mzJ-UE-U7w" firstAttribute="trailing" secondItem="DfI-aI-GOa" secondAttribute="trailing" id="CW5-kc-ejY"/>
-                                    <constraint firstItem="mzJ-UE-U7w" firstAttribute="centerX" secondItem="l3F-7l-GDE" secondAttribute="centerX" id="FOq-ng-cca"/>
-                                    <constraint firstItem="mzJ-UE-U7w" firstAttribute="top" secondItem="DfI-aI-GOa" secondAttribute="top" id="cVD-nj-PlE"/>
-                                    <constraint firstItem="mzJ-UE-U7w" firstAttribute="bottom" secondItem="DfI-aI-GOa" secondAttribute="bottom" id="oiT-BD-QVC"/>
-                                    <constraint firstItem="mzJ-UE-U7w" firstAttribute="leading" secondItem="DfI-aI-GOa" secondAttribute="leading" id="v1e-sc-f8m"/>
-                                </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="DfI-aI-GOa"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="l3F-7l-GDE"/>
-                            </scrollView>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.66541987660000002" green="0.77868574859999995" blue="0.97631341220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="bottom" secondItem="A0G-j2-tdR" secondAttribute="bottom" constant="10" id="WBb-ZO-YjG"/>
-                            <constraint firstItem="A0G-j2-tdR" firstAttribute="leading" secondItem="KyJ-GM-dxJ" secondAttribute="leading" constant="10" id="WfA-UZ-HnJ"/>
-                            <constraint firstItem="0Mi-Rv-PPN" firstAttribute="top" secondItem="KyJ-GM-dxJ" secondAttribute="top" constant="5" id="Wns-AR-ETx"/>
-                            <constraint firstItem="A0G-j2-tdR" firstAttribute="top" secondItem="0Mi-Rv-PPN" secondAttribute="bottom" constant="10" id="dI7-ax-nbU"/>
-                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="trailing" secondItem="A0G-j2-tdR" secondAttribute="trailing" constant="10" id="mbT-0h-kaI"/>
-                            <constraint firstItem="0Mi-Rv-PPN" firstAttribute="centerX" secondItem="Syo-6f-08d" secondAttribute="centerX" id="omd-XC-nbw"/>
+                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="trailing" secondItem="cbs-xg-cfw" secondAttribute="trailing" constant="10" id="7fq-ES-oOr"/>
+                            <constraint firstItem="8w7-Pk-cmT" firstAttribute="centerX" secondItem="Syo-6f-08d" secondAttribute="centerX" id="OK6-oO-wvE"/>
+                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="bottom" secondItem="cbs-xg-cfw" secondAttribute="bottom" constant="10" id="U1f-iL-4wd"/>
+                            <constraint firstItem="cbs-xg-cfw" firstAttribute="top" secondItem="8w7-Pk-cmT" secondAttribute="bottom" constant="10" id="VeX-AP-9s5"/>
+                            <constraint firstItem="8w7-Pk-cmT" firstAttribute="top" secondItem="KyJ-GM-dxJ" secondAttribute="top" constant="5" id="p0g-2J-CD9"/>
+                            <constraint firstItem="cbs-xg-cfw" firstAttribute="leading" secondItem="KyJ-GM-dxJ" secondAttribute="leading" constant="10" id="urg-0v-Igx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KyJ-GM-dxJ"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Podcasts" image="video" catalog="system" id="vJw-R5-Nbv"/>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="414" height="1000"/>
-                    <connections>
-                        <outlet property="podcastsMainStackView" destination="mzJ-UE-U7w" id="wp6-fZ-bMR"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TFX-4N-3z4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -110,6 +98,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nUr-mQ-OYs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1697" y="743"/>
+        </scene>
+        <!--Podcasts Table View Controller-->
+        <scene sceneID="MUe-gd-6NE">
+            <objects>
+                <tableViewController id="aKf-AF-JIF" customClass="PodcastsTableViewController" customModule="swift_exercise1" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Bzi-NS-8Mf">
+                        <rect key="frame" x="0.0" y="0.0" width="394" height="723"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="podcastsCell" id="qqT-dk-qgd" customClass="PodcastsTableViewCell" customModule="swift_exercise1" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="394" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qqT-dk-qgd" id="c1K-Nh-iwr">
+                                    <rect key="frame" x="0.0" y="0.0" width="394" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KWK-ld-JVs">
+                                            <rect key="frame" x="10" y="10" width="374" height="81.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Vb-Lb-4Pr">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jWq-i0-7K0">
+                                                    <rect key="frame" x="0.0" y="30.5" width="374" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="numberOfEpisodes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5h-x7-dAt">
+                                                    <rect key="frame" x="0.0" y="61" width="374" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="KWK-ld-JVs" firstAttribute="top" secondItem="c1K-Nh-iwr" secondAttribute="top" constant="10" id="UwN-v3-YKc"/>
+                                        <constraint firstAttribute="trailing" secondItem="KWK-ld-JVs" secondAttribute="trailing" constant="10" id="dEM-yM-jZh"/>
+                                        <constraint firstItem="KWK-ld-JVs" firstAttribute="leading" secondItem="c1K-Nh-iwr" secondAttribute="leading" constant="10" id="f6c-Dl-QSK"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="title" destination="9Vb-Lb-4Pr" id="3ZF-15-JHD"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="aKf-AF-JIF" id="xXR-dH-WWg"/>
+                            <outlet property="delegate" destination="aKf-AF-JIF" id="vHY-II-gG9"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="tableView" destination="Bzi-NS-8Mf" id="nAd-7n-37E"/>
+                        <outlet property="tableViewInstance" destination="Bzi-NS-8Mf" id="NbO-ga-mnG"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WM0-y7-0RU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2367" y="98"/>
         </scene>
     </scenes>
     <color key="tintColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
