--- a/swift_exercise1/swift_exercise1/Base.lproj/Main.storyboard
+++ b/swift_exercise1/swift_exercise1/Base.lproj/Main.storyboard
@@ -21,28 +21,21 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="cbs-xg-cfw">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P4Y-Rq-k2P">
                                 <rect key="frame" x="10" y="80" width="394" height="723"/>
-                                <subviews>
-                                    <containerView opaque="NO" contentMode="scaleAspectFit" id="gSC-Bd-7NL">
-                                        <rect key="frame" x="0.0" y="0.0" width="394" height="723"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                        <connections>
-                                            <segue destination="aKf-AF-JIF" kind="embed" id="GDz-mA-OLI"/>
-                                        </connections>
-                                    </containerView>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
+                                <connections>
+                                    <segue destination="aKf-AF-JIF" kind="embed" id="UtN-yF-2hW"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <color key="backgroundColor" red="0.66541987660000002" green="0.77868574859999995" blue="0.97631341220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="trailing" secondItem="cbs-xg-cfw" secondAttribute="trailing" constant="10" id="7fq-ES-oOr"/>
+                            <constraint firstItem="P4Y-Rq-k2P" firstAttribute="leading" secondItem="KyJ-GM-dxJ" secondAttribute="leading" constant="10" id="1zQ-h7-ZpH"/>
+                            <constraint firstItem="P4Y-Rq-k2P" firstAttribute="top" secondItem="8w7-Pk-cmT" secondAttribute="bottom" constant="10" id="MEL-dI-Leo"/>
                             <constraint firstItem="8w7-Pk-cmT" firstAttribute="centerX" secondItem="Syo-6f-08d" secondAttribute="centerX" id="OK6-oO-wvE"/>
-                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="bottom" secondItem="cbs-xg-cfw" secondAttribute="bottom" constant="10" id="U1f-iL-4wd"/>
-                            <constraint firstItem="cbs-xg-cfw" firstAttribute="top" secondItem="8w7-Pk-cmT" secondAttribute="bottom" constant="10" id="VeX-AP-9s5"/>
+                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="bottom" secondItem="P4Y-Rq-k2P" secondAttribute="bottom" constant="10" id="bSL-X2-Teh"/>
                             <constraint firstItem="8w7-Pk-cmT" firstAttribute="top" secondItem="KyJ-GM-dxJ" secondAttribute="top" constant="5" id="p0g-2J-CD9"/>
-                            <constraint firstItem="cbs-xg-cfw" firstAttribute="leading" secondItem="KyJ-GM-dxJ" secondAttribute="leading" constant="10" id="urg-0v-Igx"/>
+                            <constraint firstItem="KyJ-GM-dxJ" firstAttribute="trailing" secondItem="P4Y-Rq-k2P" secondAttribute="trailing" constant="10" id="vj0-XJ-aJd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KyJ-GM-dxJ"/>
                     </view>
